# mathcoe_backend

./: .env.example  .gitignore  README.md  alembic.ini  push.sh  pyproject.toml  run.py  start.bat  start.sh  stop.bat  stop.sh
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_grade.py  003_add_level.py  004_add_exam_papers.py  005_add_exam_paper_tests.py  006_add_likes.py  007_add_difficulty_level.py  008_rename_exam_paper_level.py  009_remove_question_difficulty.py  010_rename_question_level.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  admin.py  base.py  exam_paper.py  exam_paper_test.py  exam_paper_test_answer.py  favorite.py  like.py  practice_record.py  question.py  topic.py  user.py  user_progress.py
app/repositories/: __init__.py  base.py  like_repo.py  practice_repo.py  question_repo.py  topic_repo.py  user_repo.py
app/schemas/: __init__.py  admin.py  auth.py  exam_paper.py  like.py  practice.py  question.py  topic.py  user.py
app/services/: __init__.py  auth_service.py  like_service.py  practice_service.py  question_service.py  (+1 more)
sql/: 002_add_grade.sql  003_add_level.sql  004_add_exam_papers.sql  006_add_unique_constraint.sql  007_add_answer_detail_columns.sql  008_create_test_answers_table.sql  009_drop_answer_json_columns.sql  010_add_unique_constraint_user_exam.sql  011_fix_test_answers_id.sql  add_last_login.sql  init_schema.sql  init_schema_full.sql  init_schema_v007.sql  migrate_id.sql  schema_complete.sql
(+16 files in other folders)
